# bazinga

./: .gitignore  .zedstate  CMakeLists.txt  README.md  TODO.txt  animation.cpp  animation.h  audio.cpp  audio.h  bazinga.cpp  bazinga.h  cache.cpp  cache.h  compile.bat  compile.sh  console.cpp  console.h  editor.cpp  editor.h  filesystem.cpp  filesystem.h  gui.cpp  gui.h  image.cpp  image.h  index.html  input.cpp  input.h  json.cpp  json.h  map.cpp  map.h  object.cpp  object.h  render.cpp  render.h  shader.cpp  shader.h  text.cpp  text.h  (+2 more)
chipmunk/Chipmunk-6.2.1/: CMakeLists.txt
freetype/freetype-2.5.5/builds/unix/: config.status  libtool  unix-cc.mk  unix-def.mk
freetype/freetype-2.5.5/objs/: apinames
gl/: glwin.cpp  glwin.h
gui/: bgraph.cpp  bgraph.h  button.cpp  button.h  checkbox.cpp  checkbox.h  entry.cpp  entry.h  filemanager.cpp  filemanager.h  label.cpp  label.h  paletteitem.cpp  paletteitem.h  progress.cpp  progress.h  rwidget.cpp  rwidget.h  scroll.cpp  scroll.h  slider.cpp  slider.h  spacer.cpp  spacer.h  textarea.cpp  textarea.h
math/sm4/: sm4.cpp  sm4.h
math/vec2/: vec2.cpp  vec2.h
math/vec3/: vec3.cpp  vec3.h
math/vec4/: vec4.cpp  vec4.h
ogg/libogg-1.3.2/: Makefile  config.status  libtool  ogg.pc
ogg/libogg-1.3.2/autom4te.cache/: output.0  requests  traces.0  traces.1
ogg/libogg-1.3.2/doc/: Makefile
ogg/libogg-1.3.2/doc/libogg/: Makefile
ogg/libogg-1.3.2/include/: Makefile
ogg/libogg-1.3.2/include/ogg/: Makefile
ogg/libogg-1.3.2/src/: Makefile  bitwise.lo  framing.lo  libogg.la  test_bitwise  test_framing
ogg/libvorbis-1.3.4/: Makefile  config.h  config.status  libtool  vorbis.pc  vorbisenc.pc  vorbisfile.pc
ogg/libvorbis-1.3.4/doc/: Makefile
ogg/libvorbis-1.3.4/doc/libvorbis/: Makefile
ogg/libvorbis-1.3.4/doc/vorbisenc/: Makefile
ogg/libvorbis-1.3.4/doc/vorbisfile/: Makefile
ogg/libvorbis-1.3.4/examples/: Makefile
ogg/libvorbis-1.3.4/include/: Makefile
ogg/libvorbis-1.3.4/include/vorbis/: Makefile  vorbisfile.h
ogg/libvorbis-1.3.4/lib/: Makefile  analysis.lo  bitrate.lo  codebook.lo  envelope.lo  floor0.lo  floor1.lo  libvorbis.la  libvorbisenc.la  libvorbisfile.la  lookup.lo  mapping0.lo  mdct.lo  psy.lo  registry.lo  res0.lo  sharedbook.lo  smallft.lo  synthesis.lo  test_sharedbook  vorbisenc.lo  vorbisfile.lo
ogg/libvorbis-1.3.4/lib/books/: Makefile
ogg/libvorbis-1.3.4/lib/books/coupled/: Makefile
ogg/libvorbis-1.3.4/lib/books/floor/: Makefile
ogg/libvorbis-1.3.4/lib/books/uncoupled/: Makefile
ogg/libvorbis-1.3.4/lib/modes/: Makefile
ogg/libvorbis-1.3.4/m4/: Makefile
ogg/libvorbis-1.3.4/test/: Makefile
ogg/libvorbis-1.3.4/vq/: Makefile
scenes/: dream  spaceinvaders.scene
scripts/: cena01.scene.lua  center.lua  logo.lua  main.scene.lua
scripts/scene01/: augusto.lua  elismar.lua
shaders/: default-vert.glsl  text-frag.glsl
tmpbuild/: compile.bat  mapper.lua
tmpbuild/assets/animations/: augusto-slap.anim  example.anim  spacebar.anim
tmpbuild/assets/images/: augusto-slap.ase  augusto.xcf  dreamlandscape.ase  spacebar.ase
tmpbuild/lib/: libIL.so.1.1.0  libILU.so.1.1.0  libILUT.so.1.1.0  libjasper.so.1  liblcms.so.1.0.19  libmng.so.1  libmng.so.1.0.10  libogg.so.0  libpng15.so.15  libpng15.so.15.21.0  libvorbis.so.0  libvorbisenc.so.2
tmpbuild/maps/: map1
tmpbuild/scenes/: cena01  cena01.scene  intro.scene  main.scene  map1  spaceinvaders.map
tmpbuild/scripts/: cena01.scene.lua  center.lua  logo.lua  main.scene.lua  rodar.lua
tmpbuild/scripts/scene01/: augusto.lua  elismar.lua
tmpbuild/shaders/: default-frag.glsl  default-vert.glsl
